[#2265] Fix french translations in appfile, align properties with the title, display the date and not the distanceDate in creationDate properties and replace the arrow to the same as the global sidebar

--- a/frontend_app_file/src/component/FileProperties.styl
+++ b/frontend_app_file/src/component/FileProperties.styl
@@ -12,7 +12,7 @@
       &__detail
         display flex
         flex-direction column
-        padding 20px
+        padding 15px
         &__item
           margin-bottom 20px
         &__description
